@@ -44,6 +44,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26013: Added compatibility with broken protocol 2 pickles created
+  in old Python 3 versions (3.4.3 and lower).
+
 - Issue #25850: Use cross-compilation by default for 64-bit Windows.
 
 - Issue #17633: Improve zipimport's support for namespace packages.
